<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <Switch
        android:id="@+id/switch_onOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_mode"
        android:checked="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="28sp"
        android:text="@string/change_telephony"/>

    <RadioGroup
        android:id="@+id/rg_telephony"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/rb_skt"
            android:tag="SKT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_marginTop="5dp"
            android:text="@string/skt"/>
        <RadioButton
            android:id="@+id/rb_kt"
            android:tag="KT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_marginTop="5dp"
            android:text="@string/kt"/>
        <RadioButton
            android:id="@+id/rb_lgu"
            android:tag="LGU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_marginTop="5dp"
            android:text="@string/lgu"/>
        <RadioButton
            android:id="@+id/rb_na"
            android:tag="N/A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_marginTop="5dp"
            android:text="@string/n_a"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="28sp"
        android:text="@string/change_google_Account"/>

    <EditText
        android:id="@+id/et_accountInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:text="@string/ok"/>
    </LinearLayout>

</LinearLayout>